<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">e健身</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="activity_register">注册</string>
    <string name="login_name">e健身</string>
    <string name="login_pn">手机号</string>
    <string name="login_pwd">密码(6～30位数字,密码或常用字符)</string>
    <string name="login">立即登录</string>
    <string name="login_to_reg">注册</string>
    <string name="login_forget_pwd">忘记密码?</string>
    <string name="reg_pn">手机号</string>
    <string name="reg_ic">验证码</string>
    <string name="reg_pwd">密码</string>
    <string name="reg_get_ic">获取验证码</string>
    <string name="reg">注册</string>
    <string name="reg_to_login">登录</string>
    <string name="title_activity_get_back_pwd">找回密码</string>
    <string name="get_pwd_sure">确定</string>
    <string name="get_back_pwd">新密码(6～30位数字,密码或常用字符)</string>
    <string name="title_reg">注册</string>
    <string name="title_get_pwd">找回密码</string>
    <string name="title_activity_setting">设置</string>
    <string name="setting_clear">清除缓存</string>
    <string name="setting_assess">评价软件</string>
    <string name="setting_about">关于e健身</string>
    <string name="setting_view">意见反馈</string>
    <string name="setting_logout">退出当前账号</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="title_user_info">我的资料</string>
    <string name="user_info_nickname">e健身</string>
    <string name="title_activity_sign">SignActivity</string>
    <string name="title_user_sign">个性签名</string>
    <string name="title_activity_professional">职业</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_feed_back">FeedBackActivity</string>
    <string name="title_activity_comment_yjs">CommentYjsActivity</string>
    <string name="title_activity_aty_open_bluetooth">AtyOpenBluetooth</string>

    <string name="user_time">下午02:30</string>
    <string name="user_name">陈妞妞</string>
    <string name="user_feel">生命在于运动！</string>
    <string name="private_chat">私聊</string>
    <string name="inform_news">系统通知</string>

</resources>
