<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/list_item_selector">
    <LinearLayout
        android:id="@+id/llListItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <ImageView
            android:id="@+id/ivUserHead"
            android:layout_height="55dp"
            android:layout_width="55dp"
            android:background="@drawable/login_picture_bg"
            android:contentDescription="@string/app_name"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:scaleType="fitXY"
            android:src="@drawable/h001"/>

        <LinearLayout
            android:id="@+id/ll_news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/user_picture"
            android:layout_gravity="center"
            android:orientation="vertical" 
            android:layout_marginLeft="10dp">

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:gravity="center_horizontal"
                android:text="@string/user_name"
                android:textSize="@dimen/sp17"
                android:textColor="#28282b"/>

            <TextView
                android:id="@+id/tvContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/user_feel"
                android:textColor="#9e9e9e"
                android:textSize="@dimen/sp12"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        <TextView
            android:id="@+id/tvSysTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="@string/user_time"
            android:textColor="#767676"
            android:textSize="13sp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"/>
        </RelativeLayout>
        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:visibility="gone"/>
    </LinearLayout>

</RelativeLayout>