<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff" >

    <!-- 设置! -->

    <com.cy.widgetlibrary.content.CustomTitleView
        android:id="@+id/vTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/vTitle"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/ll_clear"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="30dp"
                android:text="@string/setting_clear"
                android:textColor="#505050"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/icon_next" />
        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="#b2b2b2" />

        <RelativeLayout
            android:id="@+id/ll_evaluation"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="12dp"
            android:paddingTop="12dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="28dp"
                android:text="@string/setting_assess"
                android:textColor="#505050"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/icon_next" />
        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="#b2b2b2" />

        <RelativeLayout
            android:id="@+id/ll_about"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:paddingTop="12dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="28dp"
                android:text="@string/setting_about"
                android:textColor="#505050"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/icon_next" />
        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="#b2b2b2" />

        <RelativeLayout
            android:id="@+id/ll_opinion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:paddingTop="12dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="28dp"
                android:text="@string/setting_view"
                android:textColor="#505050"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/icon_next" />
        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="#b2b2b2" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/ll_content"
        android:layout_centerInParent="true"
        android:paddingTop="50dp" >

        <Button
            android:id="@+id/bt_logout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_quit"
            android:text="@string/setting_logout"
            android:textColor="#fff" />
    </RelativeLayout>

</RelativeLayout>